# fakeoauth

./: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs  tailwind.config.js
src/: errors.rs  main.rs
src/controllers/: assets_controller.rs  greetings_controller.rs  mod.rs
src/controllers/logins_controller/: mod.rs
src/controllers/tokens_controller/: mod.rs
src/controllers/userinfos_controller/: mod.rs
src/helpers/: mod.rs
src/views/: mod.rs
src/views/greetings/: index.rs
src/views/layouts/: main.rs
src/views/logins/: index.rs
src/views/tokens/: index.rs
