[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4.5.1"
log = "0.4.21"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.201"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-rustls"] }
thiserror = "1.0.60"
yew = { version = "0.21.0", features = ["ssr"] }
